--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -1,7 +1,33 @@
+* {
+  box-sizing: border-box;
+}
+
 .page {
   font-family: "PTSans";
   font-weight: 400;
   text-transform: uppercase;
+  color: $basic-black;
+  width: 100%;
+  margin: 0;
+
+  @media (min-width: $desktop-width) {
+    background-color: var(--basic-grey);
+    box-shadow: 0px 5px 15px rgba(0, 1, 1, 0.2);
+    width: 1200px;
+    margin: 0 auto;
+  }
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
+a {
   color: $basic-black;
 }
 
@@ -16,4 +42,15 @@
   white-space: nowrap;
   clip-path: inset(100%);
   clip: rect(0 0 0 0);
+}
+
+.container {
+  @media (min-width: $tablet-width) {
+    width: 705px;
+    margin: 0 auto;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1050px;
+  }
 }
