--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -5,8 +5,9 @@ $sky-blue: #81B3D2;
 $basic-grey: #EEEEEE;
 $dark-grey: #333333;
 $light-grey: #F2F2F2;
+$space-grey: #D6D6D6;
 
 //Viewports
 $mobile-width-only: 767px;
 $tablet-width: 768px;
-$desktop-width: 1280px;
+$desktop-width: 1200px;
