added basic styles and image for form.html

--- a/source/sass/global/global.scss
+++ b/source/sass/global/global.scss
@@ -44,6 +44,11 @@ a {
   clip: rect(0 0 0 0);
 }
 
+fieldset {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .container {
   @media (min-width: $tablet-width) {
     width: 705px;
