--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,4 +9,8 @@
 @import "blocks/main-offer.scss";
 @import "blocks/main-features.scss";
 @import "blocks/main-modal-search.scss";
+@import "blocks/button.scss";
 @import "blocks/main-footer.scss";
+@import "blocks/feedback-form.scss";
+@import "blocks/feedback-form-group.scss";
+@import "blocks/feedback-form-button.scss";
