added styles for catalog.html

--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,11 +1,14 @@
 // Colors
 $basic-white: #FFFFFF;
 $basic-black: #000000;
+$shadow-black: rgba(0, 0, 0, 0.6);
+$shadow-grey: rgba(255, 255, 255, 0.6);
 $sky-blue: #81B3D2;
 $basic-grey: #EEEEEE;
 $dark-grey: #333333;
 $light-grey: #F2F2F2;
 $space-grey: #D6D6D6;
+$intense-grey: #EAEAEA;
 
 //Viewports
 $mobile-width-only: 767px;
