--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -14,3 +14,5 @@
 @import "blocks/feedback-form.scss";
 @import "blocks/feedback-form-group.scss";
 @import "blocks/feedback-form-button.scss";
+@import "blocks/main-gallery.scss";
+@import "blocks/video-presentation.scss";
