--- a/source/sass/blocks/main-offer.scss
+++ b/source/sass/blocks/main-offer.scss
@@ -1,32 +1,33 @@
 .main-offer__slogan__wrapper {
   width: 100%;
   height: 390px;
-  background-image: url("/img/main-background-mobile@1x.jpg");
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center top, bottom;
-  margin-top: -40px;
+  background-image: url("/img/main-mobile-decor-element.svg"), url("/img/main-background-mobile@1x.jpg");
+  background-size: auto, cover;
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom, center top;
+  margin-top: 56px;
   text-align: center;
+  position: relative;
 
   @media (min-resolution: 2dppx) {
-    background-image: url("/img/main-background-mobile@2x.jpg");
+    background-image: url("/img/main-mobile-decor-element.svg"), url("/img/main-background-mobile@2x.jpg");
   }
 
   @media (min-width: $tablet-width) {
-    background-image: url("/img/main-background-tablet@1x.jpg");
+    background-image: url("/img/main-tablet-decor-element.svg"), url("/img/main-background-tablet@1x.jpg");
     height: 518px;
     margin: 0;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("/img/main-background-tablet@2x.jpg");
+      background-image: url("/img/main-tablet-decor-element.svg"), url("/img/main-background-tablet@2x.jpg");
     }
   }
 
   @media (min-width: $desktop-width) {
-    background-image: url("/img/main-background-desktop@1x.jpg");
+    background-image: url("/img/main-desktop-decor-element.svg"), url("/img/main-background-desktop@1x.jpg");
 
     @media (min-resolution: 2dppx) {
-      background-image: url("/img/main-background-desktop@2x.jpg");
+      background-image: url("/img/main-desktop-decor-element.svg"), url("/img/main-background-desktop@2x.jpg");
     }
   }
 }
@@ -44,6 +45,16 @@
 
 .main-offer__slogan picture {
   text-align: center;
+}
+
+.main-offer__decor {
+  width: 100%;
+  height: 28px;
+
+  @media (min-width: $tablet-width) {
+    height: 58px;
+  }
+
 }
 
 .main-offer__title {
