--- a/source/sass/blocks/feedback-form-button.scss
+++ b/source/sass/blocks/feedback-form-button.scss
@@ -3,8 +3,12 @@
   grid-row: 5/6;
   display: flex;
   width: 100%;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+
+  @media (min-width: $tablet-width) {
+    justify-content: space-between;
+  }
 }
 
 .feedback-form-button {
