--- a/source/sass/blocks/feedback-form.scss
+++ b/source/sass/blocks/feedback-form.scss
@@ -1,5 +1,5 @@
 .feedback-form {
-  margin-top: -30px;
+  margin-top: 56px;
 
   @media (min-width: $tablet-width) {
     margin-top: 0;
@@ -8,22 +8,31 @@
 
 .feedback-form__offer {
   height: 160px;
-  background-image: url(/img/background-form@1x.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("/img/main-mobile-decor-element.svg"), url(/img/background-form@1x.jpg);
+  background-size: auto, cover;
+  background-repeat: no-repeat, no-repeat;
+  background-position: bottom, center top;
   text-align: center;
 
   @media (min-resolution: 2dppx) {
-    background-image: url(/img/background-form@2x.jpg);
+    background-image: url("/img/main-mobile-decor-element.svg"), url(/img/background-form@2x.jpg);
   }
 
   @media (min-width: $tablet-width) {
     height: 300px;
-    background-image: url(/img/background-form-desktop@1x.jpg);
+    background-image: url("/img/main-tablet-decor-element.svg"), url(/img/background-form-desktop@1x.jpg);
   }
 
   @media (min-resolution: 2dppx) {
-    background-image: url(/img/background-form-desktop@2x.jpg);
+    background-image: url("/img/main-tablet-decor-element.svg"), url(/img/background-form-desktop@2x.jpg);
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url("/img/main-desktop-decor-element.svg"), url(/img/background-form-desktop@1x.jpg);
+  }
+
+  @media (min-resolution: 2dppx) {
+    background-image: url("/img/main-desktop-decor-element.svg"), url(/img/background-form-desktop@2x.jpg);
   }
 }
 
