--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,4 @@
 @import "blocks/feedback-form-button.scss";
 @import "blocks/main-gallery.scss";
 @import "blocks/video-presentation.scss";
+@import "blocks/modal-popup.scss";
