--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ fieldset {
 .main-offer__slogan__wrapper {
   width: 100%;
   height: 390px;
-  background-image: url("../img/main-mobile-decor-element.svg"), url("../img/main-background-mobile@1x.jpg");
+  background-image: url("/img/main-mobile-decor-element.svg"), url("/img/main-background-mobile@1x.jpg");
   background-size: auto, cover;
   background-repeat: no-repeat, no-repeat;
   background-position: bottom, center top;
@@ -254,29 +254,29 @@ fieldset {
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .main-offer__slogan__wrapper {
-    background-image: url("../img/main-mobile-decor-element.svg"), url("../img/main-background-mobile@2x.jpg");
+    background-image: url("/img/main-mobile-decor-element.svg"), url("/img/main-background-mobile@2x.jpg");
   }
 }
 @media (min-width: 768px) {
   .main-offer__slogan__wrapper {
-    background-image: url("../img/main-tablet-decor-element.svg"), url("../img/main-background-tablet@1x.jpg");
+    background-image: url("/img/main-tablet-decor-element.svg"), url("/img/main-background-tablet@1x.jpg");
     height: 518px;
     margin: 0;
   }
 }
 @media (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 768px) and (min-resolution: 2dppx) {
   .main-offer__slogan__wrapper {
-    background-image: url("../img/main-tablet-decor-element.svg"), url("../img/main-background-tablet@2x.jpg");
+    background-image: url("/img/main-tablet-decor-element.svg"), url("/img/main-background-tablet@2x.jpg");
   }
 }
 @media (min-width: 1200px) {
   .main-offer__slogan__wrapper {
-    background-image: url("../img/main-desktop-decor-element.svg"), url("../img/main-background-desktop@1x.jpg");
+    background-image: url("/img/main-desktop-decor-element.svg"), url("/img/main-background-desktop@1x.jpg");
   }
 }
 @media (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), (min-width: 1200px) and (min-resolution: 2dppx) {
   .main-offer__slogan__wrapper {
-    background-image: url("../img/main-desktop-decor-element.svg"), url("../img/main-background-desktop@2x.jpg");
+    background-image: url("/img/main-desktop-decor-element.svg"), url("/img/main-background-desktop@2x.jpg");
   }
 }
 
@@ -445,29 +445,29 @@ fieldset {
 }
 
 .main-features__item--house-logo::before {
-  background-image: url("../img/icon-house-mobile.svg");
+  background-image: url("/img/icon-house-mobile.svg");
 }
 @media (min-width: 768px) {
   .main-features__item--house-logo::before {
-    background-image: url("../img/icon-house-tablet&desktop.svg");
+    background-image: url("/img/icon-house-tablet&desktop.svg");
   }
 }
 
 .main-features__item--food-logo::before {
-  background-image: url("../img/icon-burger-mobile.svg");
+  background-image: url("/img/icon-burger-mobile.svg");
 }
 @media (min-width: 768px) {
   .main-features__item--food-logo::before {
-    background-image: url("../img/icon-burger-tablet&desktop.svg");
+    background-image: url("/img/icon-burger-tablet&desktop.svg");
   }
 }
 
 .main-features__item--souvenirs-logo::before {
-  background-image: url("../img/icon-gift-mobile.svg");
+  background-image: url("/img/icon-gift-mobile.svg");
 }
 @media (min-width: 768px) {
   .main-features__item--souvenirs-logo::before {
-    background-image: url("../img/icon-gift-tablet&desktop.svg");
+    background-image: url("/img/icon-gift-tablet&desktop.svg");
   }
 }
 
@@ -663,7 +663,7 @@ fieldset {
 
 .feedback-form__offer {
   height: 160px;
-  background-image: url("../img/main-mobile-decor-element.svg"), url(../img/background-form@1x.jpg);
+  background-image: url("/img/main-mobile-decor-element.svg"), url(/img/background-form@1x.jpg);
   background-size: auto, cover;
   background-repeat: no-repeat, no-repeat;
   background-position: bottom, center top;
@@ -671,23 +671,23 @@ fieldset {
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .feedback-form__offer {
-    background-image: url("../img/main-mobile-decor-element.svg"), url(../img/background-form@2x.jpg);
+    background-image: url("/img/main-mobile-decor-element.svg"), url(/img/background-form@2x.jpg);
   }
 }
 @media (min-width: 768px) {
   .feedback-form__offer {
     height: 300px;
-    background-image: url("../img/main-tablet-decor-element.svg"), url(../img/background-form-desktop@1x.jpg);
+    background-image: url("/img/main-tablet-decor-element.svg"), url(/img/background-form-desktop@1x.jpg);
   }
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .feedback-form__offer {
-    background-image: url("../img/main-tablet-decor-element.svg"), url(../img/background-form-desktop@2x.jpg);
+    background-image: url("/img/main-tablet-decor-element.svg"), url(/img/background-form-desktop@2x.jpg);
   }
 }
 @media (min-width: 1200px) {
   .feedback-form__offer {
-    background-image: url("../img/main-desktop-decor-element.svg"), url(../img/background-form-desktop@1x.jpg);
+    background-image: url("/img/main-desktop-decor-element.svg"), url(/img/background-form-desktop@1x.jpg);
   }
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
@@ -847,9 +847,16 @@ fieldset {
 }
 
 .feedback-form__input {
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: none;
   border: none;
   background-color: #F2F2F2;
   padding: 20px 22px 15px 22px;
+}
+.feedback-form__input:placeholder {
+  color: #333333;
 }
 @media (min-width: 768px) {
   .feedback-form__input {
@@ -859,22 +866,6 @@ fieldset {
 
 .feedback-form__input--logo {
   position: relative;
-}
-
-.feedback-form__input::-moz-placeholder {
-  color: #000000;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 26px;
-  text-transform: none;
-}
-
-.feedback-form__input::placeholder {
-  color: #000000;
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 26px;
-  text-transform: none;
 }
 
 .feedback-form__contact-details {
@@ -1092,7 +1083,7 @@ fieldset {
   position: absolute;
   width: 23px;
   height: 16px;
-  background-image: url("../img/tick.svg");
+  background-image: url("/img/tick.svg");
   left: 11px;
   top: 5px;
 }
@@ -1117,29 +1108,17 @@ fieldset {
 
 .feedback-form__area {
   width: 100%;
+  font-family: "PTSans";
+  color: #000000;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  text-transform: none;
+  padding: 13px 20px;
   border: none;
+  resize: none;
   background-color: #F2F2F2;
   margin-bottom: 51px;
-}
-
-.feedback-form__area::-moz-placeholder {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 26px;
-  text-transform: none;
-  font-family: "PTSans";
-  color: #000000;
-  padding: 13px 20px;
-}
-
-.feedback-form__area::placeholder {
-  font-size: 18px;
-  font-weight: 700;
-  line-height: 26px;
-  text-transform: none;
-  font-family: "PTSans";
-  color: #000000;
-  padding: 13px 20px;
 }
 
 .feedback-form__button-wrapper {
@@ -1173,9 +1152,23 @@ fieldset {
   }
 }
 
+.main-gallery {
+  margin-bottom: 32px;
+}
+@media (min-width: 768px) {
+  .main-gallery {
+    margin-bottom: 58px;
+  }
+}
+@media (min-width: 1200px) {
+  .main-gallery {
+    margin-bottom: 63px;
+  }
+}
+
 .main-gallery__offer {
   height: 160px;
-  background-image: url("../img/main-mobile-decor-element.svg"), url(../img/background-form@1x.jpg);
+  background-image: url("/img/main-mobile-decor-element.svg"), url(/img/background-form@1x.jpg);
   background-size: auto, cover;
   background-repeat: no-repeat, no-repeat;
   background-position: bottom, center top;
@@ -1184,29 +1177,29 @@ fieldset {
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .main-gallery__offer {
-    background-image: url("../img/main-mobile-decor-element.svg"), url(../img/background-form@2x.jpg);
+    background-image: url("/img/main-mobile-decor-element.svg"), url(/img/background-form@2x.jpg);
   }
 }
 @media (min-width: 768px) {
   .main-gallery__offer {
     height: 300px;
-    background-image: url("../img/main-tablet-decor-element.svg"), url(../img/background-form-desktop@1x.jpg);
+    background-image: url("/img/main-tablet-decor-element.svg"), url(/img/background-form-desktop@1x.jpg);
     margin-top: 0;
   }
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .main-gallery__offer {
-    background-image: url("../img/main-tablet-decor-element.svg"), url(../img/background-form-desktop@2x.jpg);
+    background-image: url("/img/main-tablet-decor-element.svg"), url(/img/background-form-desktop@2x.jpg);
   }
 }
 @media (min-width: 1200px) {
   .main-gallery__offer {
-    background-image: url("../img/main-desktop-decor-element.svg"), url(../img/background-form-desktop@1x.jpg);
+    background-image: url("/img/main-desktop-decor-element.svg"), url(/img/background-form-desktop@1x.jpg);
   }
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 2dppx) {
   .main-gallery__offer {
-    background-image: url("../img/main-desktop-decor-element.svg"), url(../img/background-form-desktop@2x.jpg);
+    background-image: url("/img/main-desktop-decor-element.svg"), url(/img/background-form-desktop@2x.jpg);
   }
 }
 
@@ -1424,7 +1417,6 @@ fieldset {
 
 @media (min-width: 1200px) {
   .main-gallery__item__button-icon {
-    stroke: #FFFFFF;
     fill: #FFFFFF;
   }
 }
@@ -1443,103 +1435,49 @@ fieldset {
 
 .video-presentation__description {
   padding: 0 20px;
+  margin-bottom: 33px;
+}
+@media (min-width: 768px) {
+  .video-presentation__description {
+    margin-bottom: 67px;
+  }
+}
+@media (min-width: 1200px) {
+  .video-presentation__description {
+    margin-bottom: 80px;
+  }
 }
 
 .video-presentation__player {
   text-align: center;
-}
-
-.video-presentation__video-bar {
-  position: relative;
-  margin-top: -50px;
+  margin-bottom: 49px;
 }
 @media (min-width: 768px) {
-  .video-presentation__video-bar {
-    margin-top: -97px;
+  .video-presentation__player {
+    margin-bottom: 40px;
+  }
+}
+@media (min-width: 1200px) {
+  .video-presentation__player {
+    margin-bottom: 85px;
   }
 }
 
-.video-presentation__range-control {
-  width: 280px;
-  height: 45px;
-  background-color: rgba(0, 0, 0, 0.6);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+.video-frame {
+  width: 320px;
+  height: 201px;
 }
 @media (min-width: 768px) {
-  .video-presentation__range-control {
+  .video-frame {
     width: 648px;
-    height: 93px;
+    height: 500px;
   }
 }
 @media (min-width: 1200px) {
-  .video-presentation__range-control {
+  .video-frame {
     width: 800px;
+    height: 500px;
   }
-}
-
-.video-presentation__scale {
-  width: 220px;
-  height: 3px;
-  background-color: rgba(255, 255, 255, 0.6);
-  position: relative;
-}
-@media (min-width: 768px) {
-  .video-presentation__scale {
-    width: 389px;
-    margin-right: 60px;
-  }
-}
-@media (min-width: 1200px) {
-  .video-presentation__scale {
-    width: 540px;
-  }
-}
-
-.video-presentation__bar {
-  width: 13px;
-  height: 13px;
-  background-color: #FFFFFF;
-  position: absolute;
-  left: 10%;
-  top: -5px;
-  border-radius: 50%;
-}
-
-.video-presentation__button-bar {
-  width: 280px;
-  height: 66px;
-  background-color: #F2F2F2;
-  margin: 0 auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr;
-  align-items: center;
-  justify-items: center;
-}
-@media (min-width: 768px) {
-  .video-presentation__button-bar {
-    width: 648px;
-    background: none;
-    position: absolute;
-    left: 28px;
-    top: 13px;
-    grid-template-columns: 92px auto 92px 92px;
-  }
-}
-@media (min-width: 1200px) {
-  .video-presentation__button-bar {
-    width: 800px;
-    left: 120px;
-  }
-}
-
-.video-presentation__subtitles {
-  grid-column: 3/4;
-  justify-self: end;
-  margin-right: 5px;
 }
 
 .modal-popup__hidden {
