--- a/css/style.css
+++ b/css/style.css
@@ -1083,7 +1083,7 @@ fieldset {
   position: absolute;
   width: 23px;
   height: 16px;
-  background-image: url("/img/tick.svg");
+  background-image: url("../img/tick.svg");
   left: 11px;
   top: 5px;
 }
