fixed relative paths to absolute paths

--- a/source/sass/blocks/feedback-form-group.scss
+++ b/source/sass/blocks/feedback-form-group.scss
@@ -295,7 +295,7 @@
   position: absolute;
   width: 23px;
   height: 16px;
-  background-image: url("../img/tick.svg");
+  background-image: url("../../img/tick.svg");
   left: 11px;
   top: 5px;
 }
