--- a/source/sass/blocks/main-modal-search.scss
+++ b/source/sass/blocks/main-modal-search.scss
@@ -1,6 +1,11 @@
 .main-modal-search__search-wrapper {
   text-align: center;
   padding: 0 30px 0 30px;
+  margin-bottom: 49px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 58px;
+  }
 }
 
 .main-modal-search__search-slogan {
